<resources>
    <string name="app_name" translatable="false">Just Java</string>

    //activity_main.xml strings
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream" translatable="false">Whipped Cream</string>
    <string name="chocolate" translatable="false">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="order">ORDER</string>

    //MainActivity.java strings
    // \u0020 adds a white-space at the end of the string
    <string name="name_colon">Name:\u0020</string>
    <string name="emailSubject" translatable="false">Just Java Order for\u0020</string>
    <string name="add_whipped_cream" translatable="false">Add whipped cream?\u0020</string>
    <string name="add_chocolate" translatable="false">Add chocolate?\u0020</string>
    <string name="quantity_colon">Quantity:\u0020</string>
    <string name="total">Total: $</string>
    <string name="thank_you">Thank you!</string>
    <string name="incrementError" translatable="false">You cannot order more than 100 coffees.</string>
    <string name="decrementError" translatable="false">You cannot order less than 1 coffee.</string>
</resources>
